# unityaml

./: README.md  install.sh  pyproject.toml  uninstall.sh  unityaml.code-workspace
plans/: file_explorer_ui.md
src/blender_export/: __init__.py  __main__.py  _blender_script.py  api.py  yaml_dump.py
src/unityaml/: __init__.py  app_state.py  base.py  blend.py  image.py  json_file.py  persistence.py  project.py  versioning.py  yaml_file.py
src/unityaml_gui/: __init__.py  __main__.py  app.py  main_window.py  settings.py
src/unityaml_gui/views/: __init__.py  assets_tab.py  detail_panel.py  file_tree.py  project_detail.py  projects_tab.py
src/unityaml_gui/views/detail/: __init__.py  blend_detail.py  image_detail.py  json_detail.py  version_selector.py  yaml_detail.py
tests/blender_export/: test_yaml_dump.py
tests/unityaml/: test_app_state.py  test_base.py  test_blend.py  test_data_layer.py  test_image.py  test_json_file.py  test_persistence.py  test_project.py  test_versioning.py  test_yaml_file.py
tests/unityaml_gui/: conftest.py  test_detail_panel.py  test_file_tree.py  test_main_window.py  test_projects_tab.py  test_settings.py  test_version_selector.py
